@@ -1,7 +1,10 @@
 pcmanx_DATA = \
-	sitelist
+	sitelist pcmanx.desktop pcmanx.png
 
 pcmanxdir = $(datadir)/pcmanx
 
 EXTRA_DIST = $(pcmanx_DATA)
 
+install-exec-hook:
+	cp pcmanx.png /usr/share/icons/
+	cp pcmanx.desktop /usr/share/applications/
